# ollama-scout

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  USAGE.md  demo.tape  ollama-scout-demo.mkv
scout/: __init__.py  benchmark.py  config.py  display.py  doctor.py  exporter.py  hardware.py  interactive.py  ollama_api.py  recommender.py
tests/: test_benchmark.py  test_config.py  test_display.py  test_doctor.py  test_exporter.py  test_hardware.py  test_interactive.py  test_ollama_api.py  test_profiles.py  test_recommender.py
